[gd_scene load_steps=16 format=2]

[ext_resource path="res://MetaBoy/Loud-Crying.png" type="Texture" id=1]
[ext_resource path="res://MetaBoy/Superhero.png" type="Texture" id=2]
[ext_resource path="res://MetaBoy/Yatagan.png" type="Texture" id=3]
[ext_resource path="res://MetaBoy/Layers.gd" type="Script" id=4]
[ext_resource path="res://MetaBoy/MetaBoy.gd" type="Script" id=5]
[ext_resource path="res://MetaBoy/MetaBoyFSM.gd" type="Script" id=6]
[ext_resource path="res://MetaBoy/close_arm.png" type="Texture" id=7]
[ext_resource path="res://MetaBoy/far_arm.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 23.5 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainBody/FarArmRoot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainBody/FarArmRoot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 16, 5 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainBody/FarArmRoot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 16, 2 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainBody/FarArmRoot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 14, 3 ), Vector2( 15, 4 ), Vector2( 16, 5 ), Vector2( 15, 3 ), Vector2( 14, 2 ), Vector2( 14, 1 ), Vector2( 14, 3 ), Vector2( 16, 4 ), Vector2( 15, 5 ), Vector2( 16, 3 ), Vector2( 16, 2 ), Vector2( 15, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001

[sub_resource type="Animation" id=11]
resource_name = "swing"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody/FarArmRoot/FarArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainBody/FarArmRoot/FarArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 135.0, 135.0, 0.0 ]
}

[node name="MetaBoy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 5 )

[node name="MainBody" type="Node2D" parent="."]
script = ExtResource( 4 )
frame = 5

[node name="Weapon" type="Sprite" parent="MainBody"]
visible = false
texture = ExtResource( 3 )
hframes = 5
vframes = 3
frame = 5

[node name="Body" type="Sprite" parent="MainBody"]
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 5

[node name="FarArmRoot" type="Position2D" parent="MainBody"]
position = Vector2( 14, 1 )

[node name="FarArm" type="Sprite" parent="MainBody/FarArmRoot"]
texture = ExtResource( 8 )
offset = Vector2( -14, -3 )
hframes = 5
vframes = 3

[node name="Face" type="Sprite" parent="MainBody"]
texture = ExtResource( 1 )
hframes = 5
vframes = 3
frame = 5

[node name="CloseArm" type="Sprite" parent="MainBody"]
texture = ExtResource( 7 )
hframes = 5
vframes = 3
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 9 )
anims/run = SubResource( 7 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="JumpGraceTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ActionPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/swing = SubResource( 11 )

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
